trying to add swipable tabs.. this is taking longer than it should :@

--- a/web/webapp-client/src/assets/scss/main.scss
+++ b/web/webapp-client/src/assets/scss/main.scss
@@ -1,7 +1,8 @@
-@import './vendor/normalize.css';
-@import './fonts.scss';
+@import "./vendor/normalize.css";
+@import "./fonts.scss";
 
-:root, html {
+:root,
+html {
   --color-green: #31e8b7;
   --color-blue: #2847d9;
   --color-white: #fff;
